--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,11 @@
     "bootstrap": "^5.3.2",
     "vanjs-core": "^1.2.6"
   },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "sass": "^1.69.5",
     "vite": "^5.0.7"
